Fix old destination country page styling, visainfo gap

--- a/frontend/src/Pages/UserViewPages/DestinationCountry/DestinationCountry.scss
+++ b/frontend/src/Pages/UserViewPages/DestinationCountry/DestinationCountry.scss
@@ -18,6 +18,22 @@
     display: flex;
     flex-direction: column;
     gap: 16px;
+
+    h2 {
+      font-size: 24px;
+      font-weight: 700;
+      color: $greyMiddleDark;
+    }
+
+    .destination-country-posts {
+      display: grid;
+      flex-direction: column;
+      gap: 8px;
+
+      &.last:last-child {
+        margin-bottom: 64px;
+      }
+    }
   }
 
   .destination-country-highlights-container {
@@ -48,14 +64,28 @@
     .destination-country-upper-container {
       display: grid;
       grid-template-columns: 1fr 1fr;
-      max-width: 1300px;
-      margin: 0 auto;
-      gap: 24px;
+    }
+
+    .destination-country-posts-container {
+      .destination-country-posts {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 16px;
+      }
     }
 
     .destination-country-highlights-container {
       flex-direction: row;
       gap: 16px;
+    }
+  }
+}
+
+@media screen and ($tabletMedium) {
+  .destination-country-page-container {
+    .destination-country-upper-container {
+      max-width: 1300px;
+      margin: 0 auto;
+      gap: 24px;
     }
   }
 }
@@ -72,6 +102,15 @@
     .destination-country-posts-container {
       max-width: 1300px;
       margin: 0 auto;
+
+      h2 {
+        margin-top: 24px;
+      }
+
+      .destination-country-posts {
+        grid-template-columns: repeat(4, 1fr);
+        gap: 16px;
+      }
     }
   }
 }
