--- a/frontend/src/components/user/molecules/VisaInfo/VisaInfo.scss
+++ b/frontend/src/components/user/molecules/VisaInfo/VisaInfo.scss
@@ -11,6 +11,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    gap: 28px;
 
     h2 {
       max-width: 300px;
